# embedded-ml-tools

./: .gitignore  .gitmodules  .mega-linter.yml  CMakeLists.txt  CMakePresets.json  Main.cpp  README.md  release-please-config.json
linear_algebra/: Matrix.hpp
ml_tools/: CMakeLists.txt
ml_tools/activations/: CMakeLists.txt  Sigmoid.hpp
ml_tools/linear_algebra/: CMakeLists.txt  Matrix.hpp
ml_tools/linear_algebra/test/: CMakeLists.txt  TestMatrix.cpp
ml_tools/losses/: CMakeLists.txt  CrossEntropy.hpp  MeanSquaredError.hpp
ml_tools/losses/test/: CMakeLists.txt  TestMeanSquaredError.cpp
ml_tools/models/: CMakeLists.txt  Model.hpp
ml_tools/normalization/: CMakeLists.txt
ml_tools/optimizers/: CMakeLists.txt  GradientDescent.hpp
ml_tools/optimizers/test/: CMakeLists.txt  TestGradientDescent.cpp
normalization/: ZScore.hpp
optimizers/: GradientDescent.hpp
